--- a/index.html
+++ b/index.html
@@ -8,10 +8,16 @@
     <title>Hello World!</title>
   </head>
   <body>
-    <h1>Hello World!</h1>
+    <h1>Badge sample</h1>
     We are using Node.js <span id="node-version"></span>,
     Chromium <span id="chrome-version"></span>,
     and Electron <span id="electron-version"></span>.
+
+    <form>
+      <label for="badgeCount">Set a new badge count : </label>
+      <input type="number" id="badgeCount" value="15" />
+      <button type="button" id="validate">Validate</button>
+    </form>
 
     <!-- You can also require other files to run in this process -->
     <script src="./renderer.js"></script>
